@@ -5,7 +5,7 @@ dnl 2.52 is quite realistic
 AC_PREREQ(2.52)
 
 AM_INIT_AUTOMAKE([foreign])
-AM_PATH_PYTHON
+AM_PATH_PYTHON([2.5])
 AC_PATH_PROG(TXT2TAGS, txt2tags)
 
 AC_CONFIG_FILES([
